--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/triciopa/node-complete-guide#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
